force-app/main/default/objects/Field__c/fields/FieldActive__c.field-meta.xml
<CustomField>
    <fullName>FieldActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>פעיל</label>
    <type>Checkbox</type>
</CustomField>