force-app/main/default/objects/Field__c/fields/FieldChangesDescription__c.field-meta.xml
<CustomField>
    <fullName>FieldChangesDescription__c</fullName>
    <label>תיעוד שינויים – מלל חופשי</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>