force-app/main/default/objects/Field__c/fields/FieldSFId__c.field-meta.xml
<CustomField>
    <fullName>FieldSFId__c</fullName>
    <displayFormat>F-{00000000}</displayFormat>
    <label>מספר מזהה</label>
    <type>AutoNumber</type>
</CustomField>