force-app/main/default/objects/Field__c/fields/FieldStatus__c.field-meta.xml
<CustomField>
    <fullName>FieldStatus__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>טיוטה</fullName>
            </value>
            <value>
                <fullName>אושר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>