force-app/main/default/objects/Field__c/fields/FieldTags__c.field-meta.xml
<CustomField>
    <fullName>FieldTags__c</fullName>
    <label>תגיות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>