force-app/main/default/objects/Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FieldExtId__c</columns>
    <columns>NAME</columns>
    <columns>FieldArabicName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FieldChangesDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>